--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -4,8 +4,25 @@
     box-sizing: border-box;
 }
 
+.project-header {
+    font-size: 3em;
+    padding-bottom: 1em;
+}
+
+.project-subheader {
+    font-size: 3em;
+    padding: 2em 0 0.5em 0;
+}
+
 .hero {
-    width: 60%;
+    width: 70%;
+}
+
+.project-description {
+    width: 28%;
+    text-align: left;
+    font-size: 1.5em;
+    margin-left: 2%;
 }
 
 .flex-container {
