--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -9,6 +9,9 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    background-image: url(../assets//images/design_background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .logo {
