--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -27,6 +27,8 @@
 }
 
 .half-page h2 {
-    color: white;
-    font-size: 3em;
+    font-size: 2em;
+    background-color: var(--background);
+    border: 2px solid var(--primary);
+    padding: 0.5em 1.5em;
 }
