--- a/src/styles/ProjectsGrid.css
+++ b/src/styles/ProjectsGrid.css
@@ -20,3 +20,16 @@
     opacity: 0.8;
     cursor: pointer;
 }
+
+.project-item-text {
+    margin-top: 2%;
+    margin-bottom: 5%;
+}
+
+.project-item-text h3 {
+    padding-bottom: 0.1em;
+}
+
+.project-item-text p {
+    padding-bottom: 0.3em;
+}
