--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,6 +2,7 @@
     list-style: none;
     justify-content: center;
     align-items: center;
+    background-color: var(--background);
 }
 
 .nav li {
