--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -1,6 +1,7 @@
 .work-page {
     width: 100%;
-    height: 100vh;
+    margin-top: 7vh;
+    height: 93vh;
     display: flex;
     position: fixed;
     top: 0;
