--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -8,10 +8,20 @@
     --primary: #FF0266;
     --secondary: #FFFFFF;
     --background: #212121;
+    --header-text: 'Roboto Slab';
+    --body-text: 'Open Sans'
 }
 
 body {
     background-color: var(--background);
     color: var(--secondary);
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: var(--header-text);
+}
+
+p {
+    font-family: var(--body-text);
 }
 
