--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     background-color: var(--background);
+    font-family: var(--header-text);
 }
 
 .nav li {
