--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -29,6 +29,7 @@
     padding: 5% 0 5% 5%;
     margin-left: 3%;
     font-size: 1.5em;
+    font-family: var(--body-text);
 }
 
 .about-skills li, .about-text li {
