--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,62 +1,26 @@
-/* body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
-@font-face {
-  font-family: 'OpenSans';
-  src: local('OpenSans'), url(../assets/fonts/OpenSans-Light.ttf) format('truetype');
-  font-weight: 300;
-  font-style: normal;
+:root {
+  --primary: #FF0266;
+  --secondary: #FFFFFF;
+  --background: #212121;
+  --header-text: 'Roboto Slab';
+  --body-text: 'Open Sans'
 }
 
-@font-face {
-  font-family: 'OpenSans';
-  src: local('OpenSans'), url(../assets/fonts/OpenSans-Regular.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
+body {
+  background-color: var(--background);
+  color: var(--secondary);
 }
 
-@font-face {
-  font-family: 'OpenSans';
-  src: local('OpenSans'), url(../assets/fonts/OpenSans-Bold.ttf) format('truetype');
-  font-weight: 600;
-  font-style: normal;
+h1, h2, h3, h4, h5 {
+  font-family: var(--header-text);
 }
 
-@font-face {
-  font-family: 'RobotoSlab';
-  src: local('RobotoSlab'), url(../assets/fonts/RobotoSlab-Light.ttf) format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'RobotoSlab';
-  src: local('RobotoSlab'), url(../assets/fonts/RobotoSlab-Regular.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'RobotoSlab';
-  src: local('RobotoSlab'), url(../assets/fonts/RobotoSlab-Bold.ttf) format('truetype');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'RobotoSlab';
-  src: local('RobotoSlab'), url(../assets/fonts/RobotoSlab-ExtraBold.ttf) format('truetype');
-  font-weight: 800;
-  font-style: normal;
+p {
+  font-family: var(--body-text);
 }
