--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -26,7 +26,7 @@
     width: 17%;
     text-align: left;
     border: 2px solid var(--primary);
-    padding: 5% 0 5% 5%;
+    padding: 5%;
     margin-left: 3%;
     font-size: 1.5em;
     font-family: var(--body-text);
