--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 80vh;
     margin-bottom: 6em;
 }
 
@@ -23,7 +24,7 @@
 }
 
 .about-skills {
-    width: 17%;
+    width: 20%;
     text-align: left;
     border: 2px solid var(--primary);
     padding: 5%;
@@ -40,6 +41,9 @@
 .about-image {
     width: 30%;
     height: 100%;
+    background-size: cover;
+    background-position: center center;
+
 }
 
 .about-image img {
