--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -49,3 +49,25 @@
 .about-image img {
     width: 100%;
 }
+
+/* RESPOSNIVE */
+
+/* SMARTPHONES PORTRAIT */
+@media only screen and (min-width: 300px) {
+
+}
+
+/* SMARTPHONES LANDSCAPE */
+@media only screen and (min-width: 480px) {
+    
+}
+
+/* TABLETS PORTRAIT */
+@media only screen and (min-width: 768px) {
+    
+}
+
+/* TABLET LANDSCAPE // DESKTOP */
+@media only screen and (min-width: 1024px) {
+    
+}
