--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,6 @@
 .about-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -54,6 +55,23 @@
 
 /* SMARTPHONES PORTRAIT */
 @media only screen and (min-width: 300px) {
+
+    .about-text {
+        width: 75%;
+        font-size: 1em;
+    }
+
+    .about-image {
+        width: 75%;
+        height: 60%;
+        margin-bottom: 2em;
+    }
+
+    .about-skills {
+        width: 75%;
+        text-align: center;
+        margin: 2em 0;
+    }
 
 }
 
