--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -3,6 +3,7 @@
     margin-top: 6vh;
     height: 94vh;
     display: flex;
+    flex-wrap: wrap;
     position: fixed;
     top: 0;
     left: 0;
@@ -55,6 +56,20 @@
 
 /* SMARTPHONES PORTRAIT */
 @media only screen and (min-width: 300px) {
+
+    .work-page {
+        margin-top: 24vh;
+        height: 76vh;
+    }
+
+    .half-page {
+        width: 100%;
+        height: 50%;
+    }
+
+    .content h2 {
+        font-size: 1.5em;
+    }
 
 }
 
