--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
   --secondary: #FFFFFF;
   --background: #212121;
   --header-text: 'Roboto Slab';
-  --body-text: 'Open Sans'
+  --body-text: 'Open Sans';
 }
 
 body {
