--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80vh;
+    height: auto;
     margin-bottom: 6em;
 }
 
@@ -41,7 +41,7 @@
 
 .about-image {
     width: 30%;
-    height: 100%;
+    height: 75vh;
     background-size: cover;
     background-position: center center;
 
@@ -54,7 +54,11 @@
 /* RESPOSNIVE */
 
 /* SMARTPHONES PORTRAIT */
-@media only screen and (min-width: 300px) {
+@media only screen and (max-width: 767px) {
+
+    .about-container {
+        margin-bottom: 3em;
+    }
 
     .about-text {
         width: 75%;
@@ -62,8 +66,8 @@
     }
 
     .about-image {
+        height: 40vh;
         width: 75%;
-        height: 60%;
         margin-bottom: 2em;
     }
 
@@ -76,7 +80,7 @@
 }
 
 /* SMARTPHONES LANDSCAPE */
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 421px) and (max-width: 767px) and (orientation: landscape) {
     
 }
 
