--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,6 +2,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    display: flex;
     margin: 2em 0;
 }
 
@@ -14,26 +15,4 @@
 .footer img:hover {
     opacity: 0.7;
     cursor: pointer;
-}
-
-/* RESPOSNIVE */
-
-/* SMARTPHONES PORTRAIT */
-@media only screen and (min-width: 300px) {
-
-}
-
-/* SMARTPHONES LANDSCAPE */
-@media only screen and (min-width: 480px) {
-    
-}
-
-/* TABLETS PORTRAIT */
-@media only screen and (min-width: 768px) {
-    
-}
-
-/* TABLET LANDSCAPE // DESKTOP */
-@media only screen and (min-width: 1024px) {
-    
 }
