--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -49,7 +49,7 @@
 /* RESPOSNIVE */
 
 /* SMARTPHONES PORTRAIT */
-@media only screen and (min-width: 300px) {
+@media only screen and (max-width: 767px) {
 
     .nav li {
         display: block;
@@ -61,7 +61,7 @@
         padding: 0.5em;
         width: 100%;
     }
-
+    
     .nav li img {
         position: static;
         height: 40px;
@@ -77,7 +77,7 @@
 }
 
 /* SMARTPHONES LANDSCAPE */
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 421px) and (max-width: 767px) and (orientation: landscape) {
     
 }
 
