--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -36,6 +36,7 @@
 .features-list li {
     font-size: 1.2em;
     font-family: var(--body-text);
+    text-align: left;
 }
 
 .flex-container {
@@ -87,12 +88,69 @@
 /* RESPOSNIVE */
 
 /* SMARTPHONES PORTRAIT */
-@media only screen and (min-width: 300px) {
+@media only screen and (max-width: 767px) {
+
+    .project-header {
+        font-size: 1.5em;
+    }
+
+    .project-subheader {
+        font-size: 1.5em;
+    }
+
+    .hero {
+        width: 100%;
+        margin-bottom: 2em;
+    }
+
+    .project-description {
+        width: 100%;
+        font-size: 1em;
+    }
+
+    .flex-container {
+        width: 75%;
+        margin: 0 12.5%;
+    }
+
+    .one-row {
+        width: 75%;
+    }
+
+    .two-row {
+        width: 100%;
+        margin-bottom: 1.5%;
+    }
+
+    .three-row {
+        width: 100%;
+        margin-bottom: 1.5%;
+    }
+
+    .two-column-grid {
+        column-count: 1;
+        margin: 2em 12.5%;
+    }
+
+    .video-demo {
+        width: 80%;
+        height: auto;
+    }
+
+    .app-description {
+        font-size: 1em;
+        margin: 0 12.5%;
+    }
+
+    .features-list {
+        font-size: 0.8em;
+        margin: 0 15%;
+    }
 
 }
 
 /* SMARTPHONES LANDSCAPE */
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 421px) and (max-width: 767px) and (orientation: landscape) {
     
 }
 
