--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -55,11 +55,12 @@
 /* RESPOSNIVE */
 
 /* SMARTPHONES PORTRAIT */
-@media only screen and (min-width: 300px) {
+@media only screen and (max-width: 767px) {
 
     .work-page {
         margin-top: 24vh;
         height: 76vh;
+        flex-direction: column;
     }
 
     .half-page {
