--- a/src/styles/ProjectsGrid.css
+++ b/src/styles/ProjectsGrid.css
@@ -56,13 +56,21 @@
 }
 
 /* SMARTPHONES LANDSCAPE */
-@media only screen and (min-width: 421px) and (max-width: 767px) and (orientation: landscape) {
+@media only screen and (min-width: 421px) and (max-width: 900px) and (orientation: landscape) {
     
+    .project-item {
+        width: 45%;
+    }
+
 }
 
 /* TABLETS PORTRAIT */
-@media only screen and (min-width: 768px) {
-    
+@media only screen and (min-width: 768px) and (max-width: 1100px) and (orientation: portrait) {
+
+    .project-item {
+        width: 45%;
+    }
+
 }
 
 /* TABLET LANDSCAPE // DESKTOP */
