--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -66,12 +66,29 @@
 }
 
 /* SMARTPHONES LANDSCAPE */
-@media only screen and (min-width: 421px) and (max-width: 767px) and (orientation: landscape) {
+@media only screen and (min-width: 421px) and (max-width: 900px) and (orientation: landscape) {
     
+
+    .home-page {
+        height: 60vh;
+    }
+
+    .logo img {
+        display: none;
+    }
+
+    .details {
+        font-size : 1.2em;
+    }
+
+    .button {
+        padding: 1em 2em;
+    }
+
 }
 
 /* TABLETS PORTRAIT */
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+@media only screen and (min-width: 768px) and (max-width: 1100px) and (orientation: portrait) {
     
 }
 
