--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -58,9 +58,10 @@
 @media only screen and (max-width: 767px) {
 
     .work-page {
-        margin-top: 24vh;
-        height: 64vh;
+        height: 100vh;
         flex-direction: column;
+        position: static;
+        margin: 0;
     }
 
     .half-page {
@@ -75,13 +76,39 @@
 }
 
 /* SMARTPHONES LANDSCAPE */
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) and (max-width: 900px) and (orientation: landscape) {
     
+    .work-page {
+        position: static;
+        height: 100vh;
+        margin: 0;
+    }
+    
+    .content h2 {
+        font-size: 1.5em;
+    }
+
 }
 
 /* TABLETS PORTRAIT */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1100px) and (orientation: portrait) {
     
+    .work-page {
+        height: 100vh;
+        flex-direction: column;
+        position: static;
+        margin: 0;
+    }
+
+    .half-page {
+        width: 100%;
+        height: 50%;
+    }
+
+    .content h2 {
+        font-size: 1.5em;
+    }
+
 }
 
 /* TABLET LANDSCAPE // DESKTOP */
