--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -86,3 +86,8 @@
 @media only screen and (min-width: 768px) and (max-width: 1100px) and (orientation: portrait) {
     
 }
+
+/* TABLET LANDSCAPE // DESKTOP */
+@media only screen and (min-width: 901px) and  (max-width: 1400px){
+
+}
