--- a/src/styles/ProjectsGrid.css
+++ b/src/styles/ProjectsGrid.css
@@ -72,3 +72,12 @@
     }
 
 }
+
+/* TABLET LANDSCAPE // DESKTOP */
+@media only screen and (min-width: 901px) and  (max-width: 1400px){
+    
+    .project-item {
+        width: 45%;
+    }
+
+}
